    - The Devanagary layout variant is 'deva', not 'dev'.  Closes: #420797.
    - Do not leave empty default codeset for unsupported locales.
      Closes: #420802.  
    - Use 'jp(latin)' instead of 'us' in the Latin mode of Japanese
      keyboards.  Override the keyboard model if it was chosen by default
      and the layout is Japanese or Brasilian.  Closes: #420824.
  * Two additions to the FAQ:
    - Add a suggestion for the VBERestore option.  Thanks to Dmitry
      Semyonov, closes: #402143.
    - Document CapsLock working as ShiftLock in Unicode mode.
  * Added Dutch translation.  Thanks to : Bart Cornelis, closes: #415518.

 --

console-setup (1.15) unstable; urgency=low

  * Updated Georgian letters for Fixed16 and Fixed14.  Thanks to Vladimer
    Sichinava.

 -- Anton Zinoviev <zinoviev@debian.org>  Wed, 14 Mar 2007 21:50:54 +0200

console-setup (1.14) unstable; urgency=low

  * Non-maintainer upload to fix pending l10n issues.
  * Debconf translations:
    - Czech. Closes: #408602
    - Spanish. Closes: #412128
    - Galician. Closes: #413356
    - Convert French to UTF-8

 -- Christian Perrier <bubulle@debian.org>  Sun,  4 Mar 2007 19:54:11 +0100

console-setup (1.13) unstable; urgency=low

  * Unfuzzy the translations.

 -- Anton Zinoviev <zinoviev@debian.org>  Mon, 13 Nov 2006 21:24:44 +0200

console-setup (1.12) unstable; urgency=low

  * standards.equivalents: approximate symbols used by some popular
    console applications.
  * New German translation.  Thanks to Matthias Julius, closes: #396815.
  * Updated French translation.  Thanks to Jean-Luc Coulon, closes: #398023.
  * Allign the choices of console-setup/codeset.
  * Updated Fonts/bdf/georgian16.psf (author: Gia Shervashidze).  Update
    provided by Vladimer Sichinava.

 -- Anton Zinoviev <zinoviev@debian.org>  Mon, 13 Nov 2006 17:30:40 +0200

console-setup (1.11) unstable; urgency=low

  * Instead of X keycode 123 (<KPDC>) map X keycode 211 (<AB11>) to kernel